--- a/zootycoonanswer/src/main/resources/application.properties
+++ b/zootycoonanswer/src/main/resources/application.properties
@@ -1,8 +1,22 @@
 #datasource(oracle)
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
+#spring.datasource.username=C##BOOTUSER
+#spring.datasource.password=C##BOOTUSER
+
+#datasource(h2)
+spring.h2.console.enabled=true
+spring.h2.console.path=/db
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=C##BOOTUSER
 spring.datasource.password=C##BOOTUSER
+spring.datasource.url=jdbc:h2:mem:testdb
+
+spring.sql.init.schema-locations=classpath*:/schema.sql
+spring.sql.init.data-locations=classpath*:/data.sql
+spring.sql.init.mode=always
 
 server.port=8080
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.defer-datasource-initialization=true
